<resources>
    <string name="app_name">Professional Development</string>

    <!-- bottom nav menu -->
    <string name="word_translation">Перевод слов</string>
    <string name="history_word_translation">История просмотра</string>
    <string name="favorites_word_translation">Избраное</string>
    <string name="settings">Настройки</string>
    <string name="delete_menu">Удалить</string>

    <!-- О приложении -->
    <string name="about_app">О приложении</string>
    <string name="personalization_app">Персонализация</string>
    <string name="cod_version">Код версии:</string>
    <string name="version">Версия:</string>

    <string name="error_textview_stub">Ошибка</string>
    <string name="reload_button">Перезагрузить</string>
    <string name="undefined_error">Неизвестная ошибка</string>
    <string name="no_data_available">Нет данных</string>
    <string name="title_toolbar_description">Назад</string>
    <string name="empty_server_response_on_success">Ответ от сервера пуст</string>
    <string name="search_hint">Введите слово</string>
    <string name="delete_description">X</string>
    <string name="search">Поиск</string>
    <string name="description">Описание: Зайдите на основной сайт.</string>
    <string name="description_default">Описание: Зайдите на основной сайт.</string>
    <string name="dialog_tittle_sorry">Извините</string>
    <string name="dialog_title_device_is_offline">Нет подключения к Интернету</string>
    <string name="dialog_message_device_is_offline">Вы не можете использовать приложение без
        подключения к Интернету. Пожалуйста, проверьте подключение к Интернету.</string>
    <string name="dialog_button_cancel">Отменить</string>
    <string name="image_stub">Изображение</string>

    <!-- Для экрана истории -->
    <string name="search_through_the_list">Поиск по списку</string>
    <string name="word_helper_text">Поищите слово в предложенном списке</string>

    <!-- Settings info -->
    <string name="version_code">Код версии: </string>
    <string name="version_name">Версии: </string>
    <string name="app_info">О Приложении\n\nПриложение является результатом выполнения
                    практических заданий по освоению разработки Android приложений.
                    \n\nКурс - Профессиональная разработка Android-приложений\n(Апрель 2023 года)</string>

    <!-- Exception info -->
    <string name="view_model_exception">Сначала должна быть инициализирована ViewModel </string>
    <string name="fragment_exception">Такого фрагмента нет </string>


</resources>